<resources>
    <string name="app_name">JustIn</string>
    <string name="internet_title">Internet Connection Error</string>
    <string name="internet_des">Please make sure your internet connection</string>
    <string name="search">Search</string>
    <string name="app_icon">App Icon</string>
    <string name="action_add_channel">Add Channel</string>
    <string name="delete">Delete</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="registration">REGISTER</string>
    <string name="btn_save">Save</string>
    <string name="btn_change_mobile">Change Mobile</string>
    <string name="btn_delete_channel">Delete Channel</string>
    <string name="join">JOIN</string>
    <string name="letter">J</string>
    <string name="active">Available</string>
    <string name="channel_name">Channel Name</string>
    <string name="name">Name :</string>
    <string name="name1">Rakesh R. Sharma</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="vehicle_name1">Bolero</string>
    <string name="type">Type</string>
    <string name="type1">Sedan</string>
    <string name="category">Category</string>
    <string name="mobile_no">Mobile No :</string>
    <string name="mobile_no1">9787866554</string>
    <string name="vehicle_no">Vehicle No :</string>
    <string name="vehicle_no1">MP-04CF-9009</string>
    <string name="name_hint">Name</string>
    <string name="dob_hint">Date Of Birth</string>
    <string name="mobile_no_hint">Mobile No</string>
    <string name="city_hint">City</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_otp_hint">Enter OTP</string>
    <string name="owner">Owner</string>
    <string name="mobile">Mobile</string>
    <string name="channel">Channel</string>
    <string name="number">Number</string>
    <string name="followers">Followers</string>
    <string name="follower_count">(39)</string>
    <string name="block">Block</string>
    <string name="allow">Allow</string>
    <string name="sudarshna">Sudarshna</string>
    <string name="sudarshna_mo">9111888082</string>
    <string name="aditya_bhatnagar">Aditya Bhatnagar</string>
    <string name="aditya_bhatnagar_no">8099125561</string>
    <string name="aditya_bhatnagar_no1">+91 98569 12365</string>
    <string name="bhupendra">Bhupendra</string>
    <string name="bhupendra_no">9787165467</string>
    <string name="lorem">Lorem</string>
    <string name="lorem_no">9087651790</string>
    <string name="more">More...</string>
    <string name="setting">Setting</string>
    <string name="new_mobile_number">New Mobile No</string>
    <string name="dob">DOB of User to verify</string>
    <string name="change_channel">*This will transfer Channel to new mobile</string>
    <string name="channel_deletion_description">Change will be deleted only after all user have been blocked</string>
    <string name="my_account">My Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="help_and_faq">Help &amp; FAQ</string>
    <string name="terms_and_privacy">Terms &amp; Privacy</string>
    <string name="select_default_follower_setting">Select Default follower setting</string>
    <string name="upgrade_to_premium">Upgrade to Premium</string>
    <string name="agree_to_continue">by tapping continue, you agree to our \n <u><font color="#039be5"><b>Terms and Condition</b></font> </u> and <u><font color="#039be5"><b>Privacy Policy.</b></font></u></string>
    <string name="agree"><Data><![CDATA[ <b>ABC</b> ]]> </Data></string>
    <string name="lbl_name">Name:</string>
    <string name="lbl_dob">DOB:</string>
    <string name="lbl_city">City:</string>
    <string name="lbl_gender">Gender:</string>
    <string name="lbl_user_type">User Type</string>
    <string name="lbl_free_user">Free User</string>
    <string name="lbl_valid_till">Valid till </string>
    <string name="lbl_date">11/10/2017</string>
    <string name="lbl_change_number">Change Number</string>
    <string name="lbl_delete_account">Delete Account</string>
    <string name="lbl_continue">CONTINUE</string>
    <string name="lbl_message_time">08:35</string>
    <string name="hint_channel_id">Channel Id</string>
    <string name="hint_vehicle_number">Vehicle Number</string>
    <string name="hint_old_mobile_number">Old Mobile Number</string>
    <string name="hint_new_mobile_number">New Mobile Number</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="btn_signup">Singup</string>
    <string name="btn_login">Login</string>
    <string name="btn_add_channel">Add Channel</string>
    <string name="action_my_broad_cast">My Broad Cast</string>
    <string name="action_edit_channel">Edit Channel</string>
    <string name="action_two">Action Two</string>
    <string name="action_three">Action Three</string>
    <string name="action_setting">Settings</string>
    <string name="action_share">share</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="title_my_broad_case">My Broadcast</string>
    <string name="title_add_channel">Add Channel</string>
    <string name="title_edit_channel">Edit Channel</string>
    <string name="title_settings">Settings</string>
    <string name="title_login">Login</string>
    <string name="title_sign_in">Sign In</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>