<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_our">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".7"
            android:gravity="center_vertical"
            android:layout_marginLeft="40dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:padding="10dp"
                android:src="@mipmap/ic_user_profile"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aditya_bhatnagar"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textAllCaps="false"/>

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@mipmap/ic_pen"
                        android:layout_marginLeft="10dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aditya_bhatnagar_no1"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/upgrade_to_premium"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:background="@color/colorAccent"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnMyAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:text="@string/my_account"
            android:textSize="15dp"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:background="@color/white"/>

        <!--<View
            android:layout_width="match_parent"
            android:layout_height="0.03dp"
            android:background="@color/list_view_divider"/>-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:text="@string/contact_us"
            android:textSize="15dp"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginTop="0.02dp"
            android:background="@color/white"/>

        <!--<View
            android:layout_width="match_parent"
            android:layout_height="0.03dp"
            android:background="@color/list_view_divider"/>-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:text="@string/help_and_faq"
            android:textSize="15dp"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginTop="0.02dp"
            android:background="@color/white"/>

        <!--<View
            android:layout_width="match_parent"
            android:layout_height="0.03dp"
            android:background="@color/list_view_divider"/>-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:text="@string/terms_and_privacy"
            android:textSize="15dp"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginTop="0.02dp"
            android:background="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\u00A9 2016 JustIn"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Version 1.0.0"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

</LinearLayout>