<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:padding="10dp"
            android:layout_marginBottom="8dp">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--<ImageView
                    android:id="@+id/pic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_car_icon"
                    android:layout_gravity="center_horizontal|top" />-->

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/pic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_car_white"
                    app:civ_border_width="1dp"
                    app:civ_border_color="#00000000"
                    android:layout_gravity="center_horizontal|top"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/online"
                    android:tint="@color/colorAccent"
                    android:id="@+id/iv"
                    android:padding="1dp"
                    android:layout_gravity="bottom|right"
                    android:background="@drawable/half_circle"/>
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingLeft="5dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3"
                android:paddingTop="13dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".4"
                    android:paddingLeft="5dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/svname"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/vehicle_name"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:textColor="@color/black"/>

                    <View
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/circle_border"/>

                    <TextView
                        android:id="@+id/vtype"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/type"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:layout_marginLeft="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".7"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/sname"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/owner"
                            android:textSize="17dp"
                            android:textStyle="bold"
                            android:textColor="@color/bottom"
                            android:layout_marginLeft="5dp"/>

                        <View
                            android:layout_width="5dp"
                            android:layout_height="1dp"
                            android:layout_marginLeft="5dp"
                            android:background="@color/dote"/>

                        <TextView
                            android:id="@+id/category"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/category"
                            android:textSize="17dp"
                            android:textStyle="bold"
                            android:textColor="@color/bottom"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/svnumber"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/vehicle_no1"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="@color/bottom"
                            android:layout_marginLeft="5dp"/>

                        <View
                            android:layout_width="5dp"
                            android:layout_height="5dp"
                            android:layout_marginLeft="5dp"
                            android:background="@drawable/off_line_user"/>

                        <TextView
                            android:id="@+id/smobile"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/mobile_no1"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="@color/bottom"
                            android:layout_marginLeft="5dp"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".20"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".19"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_message_time"
                android:textSize="17dp"
                android:gravity="center"
                android:layout_marginTop="10dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/remove"
                android:background="@android:color/transparent"
                android:tint="@color/gray"
                android:padding="2dp"
                android:id="@+id/remove"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>